--- a/css/base.css
+++ b/css/base.css
@@ -1,51 +1,90 @@
-
-@import url('https://fonts.googleapis.com/css?family=Noto+Sans&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Noto+Sans&display=swap");
 
 body {
-    background: rgb(19, 19, 19);
-    color: #fff;
-    font-family: 'Noto Sans', sans-serif;
+  background: rgb(19, 19, 19);
+  color: #fff;
+  font-family: "Noto Sans", sans-serif;
+}
+
+a {
+  text-decoration: none;
+}
+
+#h1{
+    text-align: center;
+    
 }
 
 .card {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background: #353535;
-    font-size: 2rem;
-    text-align: center;
-    justify-content: center;
-    color: #fff;
-    box-shadow: rgba(3, 8, 20, 0.1) 0px 0.15rem 0.5rem, rgba(2, 8, 20, 0.1) 0px 0.075rem 0.175rem;
-    height: 100%;
-    width: 100%;
-    border-radius: 4px;
-    transition: all 500ms;
-    overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: #353535;
+  font-size: 2rem;
+  text-align: center;
+  justify-content: center;
+  color: #fff;
+  box-shadow: rgba(3, 8, 20, 0.1) 0px 0.15rem 0.5rem,
+    rgba(2, 8, 20, 0.1) 0px 0.075rem 0.175rem;
+  height: 100%;
+  width: 100%;
+  border-radius: 4px;
+  transition: all 500ms;
+  overflow: hidden;
 
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
- }
-  
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
 .card:hover {
-    box-shadow: rgba(2, 8, 20, 0.1) 0px 0.35em 1.175em, rgba(2, 8, 20, 0.08) 0px 0.175em 0.5em;
-    transform: translateY(-3px) scale(1.1);
- }
+  box-shadow: rgba(2, 8, 20, 0.1) 0px 0.35em 1.175em,
+    rgba(2, 8, 20, 0.08) 0px 0.175em 0.5em;
+  transform: translateY(-3px) scale(1.1);
+}
 
- #aeonium{
-  background-image: url(../images/aeonium.jpeg);   
- }
+#aeonium {
+  background-image: url(../images/aeonium.jpeg);
+}
 
- #agave_potatorum{
-     background-image: url(../images/Agave_potatorum.jpeg);
- }
+#agave_potatorum {
+  background-image: url(../images/Agave_potatorum.jpeg);
+}
 
- #graptopetalum_pentandrum{
-     background-image: url(../images/Graptopetalum_pentandrum.jpeg);
- }
+#agave_victoria_reginae {
+  background-image: url(../images/agave_victoria_reginae.jpeg);
+}
 
- #cola_de_mono{
-     background-image: url(../images/Cola_de_mono.jpeg)
- }
+#crassula_alba {
+  background-image: url(../images/Crassula_Alba.jpeg);
+}
+
+#echeveria_perle_von_nurnberg {
+  background-image: url(../images/Echeveria_Perle_von_nurnberg.jpeg);
+}
+
+#echinocereus_pentalophus {
+  background-image: url(../images/Echinocereus_pentalophus.jpeg);
+}
+
+#graptopetalum_pentandrum {
+  background-image: url(../images/Graptopetalum_pentandrum.jpeg);
+}
+
+#haworthia_truncata {
+    background-image: url(../images/Haworthia_truncata.jpeg);
+}
+
+#kalanchoe_tyrsiflora{
+    background-image: url(../images/Kalanchoe_tyrsiflora.jpeg)
+}
+
+
+#cola_de_mono {
+  background-image: url(../images/Cola_de_mono.jpeg);
+}
+
+#stapelia{
+    background-image: url(../images/Stapelia.jpeg);
+}
