formulario sin validacion

--- a/css/base.css
+++ b/css/base.css
@@ -10,7 +10,7 @@ a {
   text-decoration: none;
 }
 
-#h1 {
+h1 {
   text-align: center;
 }
 
@@ -25,7 +25,7 @@ a {
   justify-content: center;
   color: #fff;
   box-shadow: rgba(3, 8, 20, 0.1) 0px 0.15rem 0.5rem,
-    rgba(2, 8, 20, 0.1) 0px 0.075rem 0.175rem;
+  rgba(2, 8, 20, 0.1) 0px 0.075rem 0.175rem;
   height: 100%;
   width: 100%;
   border-radius: 4px;
@@ -42,6 +42,7 @@ a {
     rgba(2, 8, 20, 0.08) 0px 0.175em 0.5em;
   transform: translateY(-3px) scale(1.1);
 }
+
 
 #aeonium {
   background-image: url(../images/aeonium.jpeg);
