creadas todas las paginas con sus respectivos elementos

--- a/css/basic-grid.css
+++ b/css/basic-grid.css
@@ -2,6 +2,6 @@
   display: grid;
   gap: 1rem;
   grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
-
   height: 100vh;
+  margin: 15px;
 }
