--- a/css/paginas.css
+++ b/css/paginas.css
@@ -1,4 +1,10 @@
 @import url("https://fonts.googleapis.com/css?family=Noto+Sans&display=swap");
+* {  
+  margin: 0;  
+  padding: 0;  
+  box-sizing: border-box;  
+  outline: none;  
+ }  
 
 body {
   background: rgb(19, 19, 19);
@@ -11,12 +17,15 @@ a {
 }
 
 h1 {
+  display: block;
   text-align: center;
+  margin: auto;
+    padding: auto;
 }
 
 .container {
     display: flex;
-    width: 70%;
+    width: 1fr;
     height: auto;
     flex-direction: column;
     align-items:center;
@@ -30,7 +39,7 @@ h1 {
 
 .texto{
     text-align: justify;
-    width: 50%;
+    width: 1fr;
     border: white solid 5px;
     border-radius: 20px;
     width: 50%;
@@ -45,7 +54,7 @@ h1 {
     align-items: center;
     border: white solid 5px;
     border-radius: 20px;
-    width: 50%;
+    width: 1fr;
     height: auto;
     margin: 10px;
     padding: 10px;
@@ -56,28 +65,45 @@ h1 {
     display: flex;
     flex-direction: row;
     border-radius: 20px;
-    width: auto;
+    width: 1fr;
     height: auto;
-    
-    
 }
-    
+
+@media screen and (max-width: 600px) {
+  .name-email{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 20px;
+    width: 1fr;
+    height: auto;
+  }
+
+  #text-area{
+    border-radius: 20px;
+    width: 25%;
+    height: auto;
+    margin: 10px;
+    padding: 10px;
+}
+}
+
 #name-label{
-    width: auto;
+  width: 1fr;
     height: auto;
     margin: 10px;
     padding: 10px;
 }
 
 #email-label{
-    width: auto;
+  width: 1fr;
     height: auto;
     margin: 10px;
     padding: 10px;
 }
 
 #text-area-label{
-    width: auto;
+  width: 1fr;
     height: auto;
     margin: 10px;
     padding: 10px;
@@ -85,7 +111,7 @@ h1 {
 
 #nombre{
     border-radius: 20px;
-    width: auto;
+    width: 1fr;
     height: auto;
     margin: 10px;
     padding: 10px;
@@ -94,7 +120,7 @@ h1 {
 
 #email{
     border-radius: 20px;
-    width: auto;
+    width: 1fr;
     height: auto;
     margin: 10px;
     padding: 10px;
@@ -103,7 +129,7 @@ h1 {
 
 #text-area{
     border-radius: 20px;
-    width: auto;
+    width: 1fr;
     height: auto;
     margin: 10px;
     padding: 10px;
