arreglados los paths relativos

--- a/css/base.css
+++ b/css/base.css
@@ -184,11 +184,11 @@ h1 {
 }
 
 #flip-card-front-aeonium {
-  background-image: url(/images/aeonium.jpeg);
+  background-image: url(../images/aeonium.jpeg);
 }
 
 #flip-card-front-agave-potatorum {
-  background-image: url(/images/Agave_potatorum.jpeg);
+  background-image: url(../images/Agave_potatorum.jpeg);
 }
 
 #flip-card-front-agave-victoria-reginae {
