arreglados los links de background

--- a/css/base.css
+++ b/css/base.css
@@ -192,39 +192,39 @@ h1 {
 }
 
 #flip-card-front-agave-victoria-reginae {
-  background-image: url(/images/agave_victoria_reginae.jpeg);
+  background-image: url(../images/agave_victoria_reginae.jpeg);
 }
 
 #flip-card-front-cola-de-mono {
-  background-image: url(/images/cola_de_mono.jpeg);
+  background-image: url(../images/cola_de_mono.jpeg);
 }
 
 #flip-card-front-crassula-alba {
-  background-image: url(/images/crassula_Alba.jpeg);
+  background-image: url(../images/crassula_Alba.jpeg);
 }
 
 #flip-card-front-echeveria-perle-von-nurnberg {
-  background-image: url(/images/echeveria_Perle_von_nurnberg.jpeg);
+  background-image: url(../images/echeveria_Perle_von_nurnberg.jpeg);
 }
 
 #flip-card-front-echinocereus-pentalophus {
-  background-image: url(/images/echinocereus_pentalophus.jpeg);
+  background-image: url(../images/echinocereus_pentalophus.jpeg);
 }
 
 #flip-card-front-graptopetalum-pentandrum {
-  background-image: url(/images/graptopetalum_pentandrum.jpeg);
+  background-image: url(../images/graptopetalum_pentandrum.jpeg);
 }
 
 #flip-card-front-haworthia-truncata {
-  background-image: url(/images/haworthia_truncata.jpeg);
+  background-image: url(../images/haworthia_truncata.jpeg);
 }
 
 #flip-card-front-kalanchoe-tyrsiflora {
-  background-image: url(/images/kalanchoe_tyrsiflora.jpeg);
+  background-image: url(../images/kalanchoe_tyrsiflora.jpeg);
 }
 
 #flip-card-front-stapelia {
-  background-image: url(/images/stapelia.jpeg);
+  background-image: url(../images/stapelia.jpeg);
 }
 
 table td {
