--- a/css/base.css
+++ b/css/base.css
@@ -19,14 +19,16 @@ body {
 
 #nav-bar {
   display: flex;
-  flex-shrink: 1;
+  flex:1;
+  flex-wrap: wrap;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: stretch;
   padding: 15px;
 }
 
 .nav-link {
+  flex: 1;
   border: 1px solid rgb(19, 19, 19);
   transition: all 500ms;
   background: #fff;
@@ -232,6 +234,30 @@ table td {
   padding: 5px;
   text-align: center;
 }
+
+.register-container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  gap: 5px 5px;
+  grid-auto-flow: column;
+}
+
+.register-photo { grid-area: 1 / 1 / 3 / 3; 
+}
+
+.register-info { grid-area: 3 / 1 / 5 / 3; }
+
+.register-forms { grid-area: 1 / 3 / 5 / 5; }
+
+.register-text { grid-area: 1 / 3 / 2 / 5; }
+
+.register-email { grid-area: 2 / 3 / 3 / 5; }
+
+.register-name { grid-area: 3 / 3 / 4 / 5; }
+
+.register-password { grid-area: 4 / 3 / 5 / 5; }
+
 
 footer {
   display: flex;
