--- a/css/registro.css
+++ b/css/registro.css
@@ -1,16 +1,71 @@
+@import url("https://fonts.googleapis.com/css?family=Noto+Sans&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  outline: none;
+}
+
+header {
+  text-align: center;
+}
+
 body {
+  background: rgb(19, 19, 19);
+  color: #fff;
+  font-family: "Noto Sans", sans-serif;
   height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
+
+#nav-bar {
+  display: flex;
+  flex: 1;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: stretch;
+  padding: 15px;
+  height: auto;
+  gap: 0;
+}
+
+.nav-link {
+  flex: 1;
+  border: 1px solid rgb(19, 19, 19);
+  transition: all 500ms;
+  background: #fff;
+  color: rgb(19, 19, 19);
+  padding: auto;
+  height: auto;
+  text-align: center;
+}
+
+.nav-link:hover {
+  transform: translateY(-3px) scale(1.1);
+}
+
+a {
+  text-decoration: none;
+  color: #fff;
+  font-family: "Noto Sans", sans-serif;
+}
+
+h1 {
+  text-align: center;
+  padding: 15px;
+}
+
 .container {
   background-color: #353535;
   border-radius: 5px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
   width: 400px;
   padding: 30px 40px;
+  margin: 40px;
 }
 .container h1 {
   text-align: center;
@@ -20,14 +75,13 @@ body {
 .input {
   margin-bottom: 20px;
   position: relative;
-  
 }
 .input label {
   display: block;
   margin-bottom: 10px;
 }
 .input input {
-    color: white;
+  color: white;
   width: 100%;
   height: 40px;
   padding: 0 15px;
