agregados dos breakpoints (celular y pc)

--- a/css/basic-grid.css
+++ b/css/basic-grid.css
@@ -1,7 +1,29 @@
-.basic-grid {
-  display: grid;
-  gap: 1rem;
-  grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
-  height: 100vh;
-  margin: 15px;
+@media (min-width: 300px) {
+  .basic-grid {
+    display: grid;
+    gap: 1rem;
+    grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
+    height: auto;
+    margin: 15px;
+  }
 }
+
+@media (min-width: 768px) {
+
+}
+
+@media (min-width: 1024px) {
+
+}
+
+@media (min-width: 1280px) {
+  .basic-grid {
+    display: grid;
+    gap: 1rem;
+    grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
+    height: 100vh;
+    margin: 15px;
+  }
+}
+
+
